# vcd-merger

./: .gitignore  Cargo.toml  README.md
src/: main.rs
tests/: expected.vcd  reorder.rs  test1.vcd  test2.vcd
